Make page scrollable by fixing overflow and image height

--- a/css/works.css
+++ b/css/works.css
@@ -4,7 +4,7 @@
   min-height: 100vh;
   position: relative;
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* Full-width image container - Background */
@@ -13,7 +13,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: 1;
 }
 
